--- a/nav.css
+++ b/nav.css
@@ -2,10 +2,15 @@ nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin-left: 50px;
-    margin-right: 100px;
+    padding-left: 50px;
+    padding-right: 100px;
     margin-top: 0;
     padding-top: 0;
+    position: sticky;
+    max-width: 100vw;
+    height: 100px;
+    background-color: black;
+    margin: 0;
 }
 
 nav .logo {
