--- a/article.css
+++ b/article.css
@@ -103,3 +103,21 @@ footer {
     background-size: cover;
     margin-top: 3rem;
 }
+
+.article-highlight {
+    color: yellow;
+    padding-left: 20px;
+    font-size: 20px;
+    line-height: 40px;
+    font-style: italic;
+}
+
+.article-highlight::before {
+    content: "'' ";
+    font-size: 40px;
+}
+
+.article-highlight::after {
+    content: "''";
+    font-size: 40px;
+}
