--- a/nav.css
+++ b/nav.css
@@ -70,3 +70,111 @@ a#nav-button {
     background: orange;
     text-decoration: none;
 }
+
+.mobile-account {
+    display: none;
+}
+
+@media only screen and (max-width: 1030px) {
+    nav .pages,
+    nav .account {
+        display: none;
+    }
+    nav .mobile-account {
+        display: block;
+    }
+    .mobile-menu {
+        display: flex;
+        flex-direction: column;
+        position: relative;
+        /* top: 10px; */
+        /* left: 25px; */
+        z-index: 1;
+        -webkit-user-select: none;
+        user-select: none;
+    }
+    .mobile-menu input {
+        display: flex;
+        width: 40px;
+        height: 320px;
+        position: absolute;
+        cursor: pointer;
+        opacity: 0;
+        z-index: 2000;
+    }
+    .mobile-menu span {
+        display: flex;
+        width: 40px;
+        height: 5px;
+        margin-bottom: 7px;
+        position: relative;
+        background: #ffffff;
+        /* border-radius: 3px; */
+        z-index: 1;
+        transform-origin: 5px 0px;
+        transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0), opacity 0.55s ease;
+    }
+    .mobile-menu span:first-child {
+        transform-origin: 0% 0%;
+    }
+    .mobile-menu span:nth-last-child(2) {
+        transform-origin: 0% 100%;
+    }
+    .mobile-menu input:checked~span {
+        opacity: 1;
+        transform: rotate(45deg) translate(-3px, -1px);
+        background: #36383F;
+    }
+    .mobile-menu input:checked~span:nth-last-child(3) {
+        opacity: 0;
+        transform: rotate(0deg) scale(0.2, 0.2);
+    }
+    .mobile-menu input:checked~span:nth-last-child(2) {
+        transform: rotate(-45deg) translate(0, -1px);
+    }
+    .mobile-account {
+        position: absolute;
+        width: 500px;
+        height: 100vh;
+        right: -200px;
+        box-shadow: 0 0 10px #85888C;
+        margin-top: -40px;
+        margin-bottom: 50px;
+        margin-left: 50px;
+        margin-right: 50px;
+        padding: 50px;
+        padding-top: 125px;
+        background-color: black;
+        -webkit-font-smoothing: antialiased;
+        transform-origin: 0% 0%;
+        transform: translate(100%, 0);
+        transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
+    }
+    .mobile-account li {
+        padding: 10px 0;
+        transition-delay: 2s;
+        font-size: 40px;
+        list-style: none;
+        margin-bottom: 30px;
+    }
+    .mobile-account li a {
+        text-decoration: none;
+        color: white;
+    }
+    .mobile-account li#buttone a#nav-buttone {
+        font-size: 40px;
+        color: white;
+        font-size: 40px;
+        font-weight: bold;
+        padding: 10px;
+        border-radius: 2px;
+        background: orange;
+        text-decoration: none;
+    }
+    .mobile-menu input:checked~ul {
+        transform: none;
+    }
+    .mobile-account li .orange {
+        color: orange;
+    }
+}
