--- a/nav.css
+++ b/nav.css
@@ -1,19 +1,20 @@
-nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-left: 50px;
-    padding-right: 100px;
-    margin-top: 0;
-    padding-top: 0;
-    position: sticky;
-    max-width: 100vw;
-    height: 100px;
-    background-color: black;
-    margin: 0;
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap');
+* {
+    margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
 }
 
-nav .logo {
+nav {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    min-height: 10vh;
+    background-color: black;
+    font-family: 'Noto Sans', sans-serif;
+}
+
+.logo {
     font-family: 'Noto Sans', sans-serif;
     font-weight: bold;
     font-size: 30px;
@@ -23,45 +24,61 @@ nav .logo {
     color: white;
 }
 
-nav span {
+.logo span {
     color: yellow;
 }
 
-nav .pages {
-    list-style: none;
+.nav-links {
     display: flex;
-    font-size: 25px;
+    justify-content: space-between;
+    list-style: none;
+    font-size: 30px;
     color: white;
 }
 
-nav .pages li a {
-    text-decoration: none;
-    color: yellow;
+#social {
+    display: flex;
+    list-style: none;
+    font-size: 30px;
+    color: white;
+    padding-right: 200px;
 }
 
-nav .pages li .orange {
-    text-decoration: none;
+#logins {
+    display: flex;
+    list-style: none;
+    font-size: 30px;
     color: white;
 }
 
-nav .pages li i {
-    padding-left: 40px;
-    cursor: pointer;
+.nav-links li {
+    list-style: none;
 }
 
-nav .account {
-    list-style: none;
-    display: flex;
+.nav-links a {
+    color: rgb(226, 226, 226);
+    text-decoration: none;
     font-size: 18px;
+    /* padding-left: 20px; */
 }
 
-nav .account #log-in,
-#button {
-    padding-left: 50px;
-    cursor: pointer;
+.nav-links .pages {
+    font-size: 23px;
+    padding-left: 25px;
 }
 
-a#nav-button {
+.nav-links .nav-text {
+    padding-right: 15px;
+}
+
+.nav-links .orange {
+    text-decoration: none;
+    color: yellow;
+}
+
+.nav-links #nav-button {}
+
+.nav-links #go-to-blog {
     color: white;
     font-size: 17px;
     font-weight: bold;
@@ -71,110 +88,105 @@ a#nav-button {
     text-decoration: none;
 }
 
-.mobile-account {
+.nav-links on-hover {}
+
+.burger {
     display: none;
 }
 
-@media only screen and (max-width: 1030px) {
-    nav .pages,
-    nav .account {
-        display: none;
+.burger div {
+    width: 25px;
+    height: 3px;
+    background-color: rgb(226, 226, 226);
+    margin: 5px;
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+
+@media screen and (max-width:1024px) {
+    .nav-links {
+        /* width: 60%; */
     }
-    nav .mobile-account {
+}
+
+@media screen and (max-width:768px) {
+    body {
+        overflow-x: hidden;
+    }
+    nav {
+        max-width: 100%;
+        overflow: hidden;
+    }
+    .logo {
+        left: 0;
         display: block;
     }
-    .mobile-menu {
+    #social {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    #logins {
         display: flex;
         flex-direction: column;
-        position: relative;
-        /* top: 10px; */
-        /* left: 25px; */
-        z-index: 1;
-        -webkit-user-select: none;
-        user-select: none;
+        font-size: 40px;
+        margin-left: 0px;
     }
-    .mobile-menu input {
+    #logins a {
+        font-size: 30px;
+    }
+    #logins #go-to-blog {
+        font-size: 20px;
+    }
+    .nav-links {
+        position: fixed;
+        right: 0px;
+        height: 90%;
+        top: 10%;
+        background-color: rgba(0, 0, 0, 0.952);
         display: flex;
-        width: 40px;
-        height: 320px;
-        position: absolute;
-        cursor: pointer;
+        flex-direction: column-reverse;
+        justify-content: space-around;
+        align-items: center;
+        width: 100%;
+        transform: translateX(100%);
+        transition: transform 0.5s ease-in;
+    }
+    .nav-links .pages {
+        font-size: 35px;
+    }
+    .nav-links li {
         opacity: 0;
-        z-index: 2000;
     }
-    .mobile-menu span {
-        display: flex;
-        width: 40px;
-        height: 5px;
-        margin-bottom: 7px;
-        position: relative;
-        background: #ffffff;
-        /* border-radius: 3px; */
-        z-index: 1;
-        transform-origin: 5px 0px;
-        transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0), background 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0), opacity 0.55s ease;
+    .burger {
+        display: block;
     }
-    .mobile-menu span:first-child {
-        transform-origin: 0% 0%;
+    .nav-active {
+        transform: translateX(0%)
     }
-    .mobile-menu span:nth-last-child(2) {
-        transform-origin: 0% 100%;
+}
+
+@keyframes navLinkFade {
+    from {
+        opacity: 0px;
+        transform: translateX(50%)
     }
-    .mobile-menu input:checked~span {
+    to {
         opacity: 1;
-        transform: rotate(45deg) translate(-3px, -1px);
-        background: #36383F;
+        transform: translateX(0%)
     }
-    .mobile-menu input:checked~span:nth-last-child(3) {
-        opacity: 0;
-        transform: rotate(0deg) scale(0.2, 0.2);
-    }
-    .mobile-menu input:checked~span:nth-last-child(2) {
-        transform: rotate(-45deg) translate(0, -1px);
-    }
-    .mobile-account {
-        position: absolute;
-        width: 500px;
-        height: 100vh;
-        right: -200px;
-        box-shadow: 0 0 10px #85888C;
-        margin-top: -40px;
-        margin-bottom: 50px;
-        margin-left: 50px;
-        margin-right: 50px;
-        padding: 50px;
-        padding-top: 125px;
-        background-color: black;
-        -webkit-font-smoothing: antialiased;
-        transform-origin: 0% 0%;
-        transform: translate(100%, 0);
-        transition: transform 0.5s cubic-bezier(0.77, 0.2, 0.05, 1.0);
-    }
-    .mobile-account li {
-        padding: 10px 0;
-        transition-delay: 2s;
-        font-size: 40px;
-        list-style: none;
-        margin-bottom: 30px;
-    }
-    .mobile-account li a {
-        text-decoration: none;
-        color: white;
-    }
-    .mobile-account li#buttone a#nav-buttone {
-        font-size: 40px;
-        color: white;
-        font-size: 40px;
-        font-weight: bold;
-        padding: 10px;
-        border-radius: 2px;
-        background: orange;
-        text-decoration: none;
-    }
-    .mobile-menu input:checked~ul {
-        transform: none;
-    }
-    .mobile-account li .orange {
-        color: orange;
-    }
+}
+
+.toggle .line1 {
+    transform: rotate(-45deg) translate(-5px, 6px);
+    /* transition: 500ms; */
+}
+
+.toggle .line2 {
+    opacity: 0;
+}
+
+.toggle .line3 {
+    transform: rotate(45deg) translate(-5px, -6px);
+    /* transition: 600ms; */
 }
