--- a/styles.css
+++ b/styles.css
@@ -4,18 +4,18 @@
     margin: 0;
     padding: 0;
     border: 0;
+    box-sizing: border-box;
 }
 
 #wrapper {
-    max-width: 1600px;
-    margin: auto;
+    max-width: 100vw;
+    /* margin: auto; */
 }
 
 body {
     background-color: black;
     font-family: 'Noto Sans', sans-serif;
     color: white;
-    box-sizing: border-box;
     max-width: 1600px;
     margin: auto;
     overflow-x: hidden;
@@ -108,6 +108,11 @@ input {
     margin: 0;
 }
 
+.ronchez-animation {
+    /* display: flex; */
+    /* overflow: hidden; */
+}
+
 .back {
     position: relative;
 }
@@ -125,6 +130,7 @@ input {
     margin-left: -200px;
     color: rgba(128, 128, 128, 0.158);
     overflow-y: hidden;
+    overflow-x: hidden;
     animation: ronchez 25s infinite;
     animation-direction: alternate;
 }
@@ -161,6 +167,7 @@ input {
     margin-left: 600px;
     color: rgba(128, 128, 128, 0.227);
     overflow-y: hidden;
+    overflow-x: hidden;
     margin-top: 30px;
     animation: fitness 25s infinite;
     animation-direction: alternate;
@@ -183,3 +190,42 @@ input {
         right: 100%;
     }
 }
+
+
+/* Tablet */
+
+@media screen and (max-width:1024px) {}
+
+
+/* Tablet end */
+
+
+/* Mobile */
+
+@media screen and (max-width:768px) {
+    header {
+        display: flex;
+        flex-direction: column-reverse;
+        /* justify-content: center; */
+        align-items: center;
+        margin: 16px;
+        /* flex-wrap: wrap; */
+    }
+    .left h1 {
+        font-size: 30px;
+    }
+    .right {
+        text-align: center;
+        margin-right: 0;
+        width: 90%;
+    }
+    .right img {
+        margin-left: 0;
+        max-width: 100%;
+        max-height: 100%;
+        object-fit: cover;
+    }
+}
+
+
+/* Mobile end */
