Mobile view blog page

--- a/blog.css
+++ b/blog.css
@@ -1,253 +1,406 @@
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap');
-@import url('./fonts/ElephantFont/Elephant-Outline.otf');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght400&display=swap');
-* {
-    box-sizing: border-box;
-}
-
-body {
-    background-color: black;
-    font-family: 'Roboto', sans-serif;
-    color: white;
-    box-sizing: border-box;
-}
-
-header {
-    background: url(https://images.unsplash.com/photo-1580086319619-3ed498161c77?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1750&q=80);
-    background-color: #cccccc;
-    height: 300px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    margin-bottom: 70px;
-}
-
-header .text {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    vertical-align: middle;
-    font-size: 70px;
-    font-weight: bold;
-}
-
-
-/* codepen code for sticky sidebar  */
-
-:root {
-    --space: 2rem;
-    --space-xs: calc(var(--space) / 3);
-    --space-sm: calc(var(--space) / 2);
-    --space-md: calc(var(--space) * 2);
-    --color-primary: lightgray;
-    --color-accent: whitesmoke;
-    --color-dark: black;
-    --color-mid: gray;
-    --color-light: white;
-    --color-highlight: dodgerblue;
-    --radius: 0.125rem;
-}
-
-
-/* Here are the base styles for the main layout and sticky component */
-
-main {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.article {
-    flex-basis: 0;
-    flex-grow: 999;
-    max-width: 80%;
-    margin-left: 20px;
-}
-
-.sidebar {
-    --offset: var(--space);
-    flex-grow: 1;
-    flex-basis: 300px;
-    align-self: start;
-    position: sticky;
-    top: var(--offset);
-    margin-right: 30px;
-}
-
-.component {
-    display: grid;
-    grid-template-rows: auto 1fr auto;
-}
-
-.component .content {
-    max-height: 500px;
-    overflow-y: auto;
-}
-
-.sidebar .component {
-    max-height: calc(100vh - var(--offset) * 2);
-}
-
-
-/* Until flexbox gap is supported in all modern browsers, we use the negative margin trick to create space between the children elements */
-
-.component {
-    position: relative;
-    border: 1px solid var(--color-primary);
-    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.04), 0 2px 4px rgba(0, 0, 0, 0.04), 0 4px 8px rgba(0, 0, 0, 0.03), 0 8px 16px rgba(0, 0, 0, 0.03), 0 16px 32px rgba(0, 0, 0, 0.02), 0 32px 64px rgba(0, 0, 0, 0.02);
-}
-
-footer {
-    background: url(https://images.unsplash.com/photo-1434682881908-b43d0467b798?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxzZWFyY2h8MzJ8fGd5bXxlbnwwfDB8MHw%3D&auto=format&fit=crop&w=1500&q=60);
-    background-color: #cccccc;
-    height: 300px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    margin-top: 50px;
-}
-
-.card {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    max-width: 80%;
-    /* background-color: white; */
-    color: white;
-    border-radius: 8px;
-    border: 1px solid grey;
-    margin: 30px 10px;
-}
-
-.card .card-image {
-    width: 700px;
-    height: 350px;
-}
-
-.card .card-image img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-top-left-radius: 8px;
-    border-bottom-left-radius: 8px;
-}
-
-.card-text {
-    margin-left: 20px;
-}
-
-.card-text .meta {
-    display: flex;
-    font-weight: bold;
-    font-size: 15px;
-}
-
-.card-text .meta .date {
-    padding-left: 10px;
-    color: yellow;
-}
-
-.card-text .title {
-    font-weight: bold;
-    font-size: 21px;
-}
-
-.card-text .content {
-    line-height: 30px;
-    color: grey;
-    max-width: 95%;
-    font-size: 14px;
-}
-
-.card-text .content .continue-reading {
-    color: darkorange;
-    font-size: 14px;
-    font-weight: bold;
-    padding: 10px;
-    border-radius: 2px;
-    text-decoration: none;
-}
-
-.card-text .content .continue-reading:hover {
-    color: yellow;
-    transition: .5s;
-    cursor: pointer;
-}
-
-.sidebar .component {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 20px;
-}
-
-.sidebar .component img {
-    width: 100px;
-    height: 100px;
-    border-radius: 100px;
-    margin: 10px;
-}
-
-.sidebar .component .header {
-    margin-bottom: 10px;
-    font-weight: bold;
-    letter-spacing: 2px;
-}
-
-.sidebar .component .content {
-    margin-bottom: 5px;
-}
-
-.sidebar .component .footer .button {
-    background: orange;
-    border: 1px solid orange;
-    padding: 8px;
-    font-weight: bold;
-    cursor: pointer;
-    border-radius: 2px;
-}
-
-.sidebar .component .footer .button:hover {
-    transition: .5s;
-    background: transparent;
-    color: white;
-}
-
-.sidebar .component .footer .empty-cart {
-    background: transparent;
-    margin-left: 10px;
-    color: white;
-}
-
-.sidebar .component .footer .empty-cart:hover {
-    transition: .5s;
-    background: orange;
-    color: black;
-}
-
-a {
-    text-decoration: none;
-}
-
-.footer-text {
-    margin-left: 20px;
-    margin-bottom: 20px;
-    padding-top: 20px;
-}
-
-.footer-text h3 {
-    font-size: 25px;
-}
-
-.footer-text h3 a {
-    text-decoration: none;
-    color: white;
-}
-
-.footer-text h3 a span {
-    color: yellow;
-}
-
-.inner-footer-text {
-    margin: 20px;
-}
+    @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap');
+    @import url('./fonts/ElephantFont/Elephant-Outline.otf');
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght400&display=swap');
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+    
+    body {
+        background-color: black;
+        font-family: 'Roboto', sans-serif;
+        color: white;
+        box-sizing: border-box;
+    }
+    
+    header {
+        background: url(https://images.unsplash.com/photo-1580086319619-3ed498161c77?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1750&q=80);
+        background-color: #cccccc;
+        height: 300px;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        margin-bottom: 70px;
+    }
+    
+    header .text {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        vertical-align: middle;
+        font-size: 70px;
+        font-weight: bold;
+    }
+    /* codepen code for sticky sidebar  */
+    
+     :root {
+        --space: 2rem;
+        --space-xs: calc(var(--space) / 3);
+        --space-sm: calc(var(--space) / 2);
+        --space-md: calc(var(--space) * 2);
+        --color-primary: lightgray;
+        --color-accent: whitesmoke;
+        --color-dark: black;
+        --color-mid: gray;
+        --color-light: white;
+        --color-highlight: dodgerblue;
+        --radius: 0.125rem;
+    }
+    /* Here are the base styles for the main layout and sticky component */
+    
+    main {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    
+    .article {
+        flex-basis: 0;
+        flex-grow: 999;
+        max-width: 80%;
+        margin-left: 20px;
+    }
+    
+    .sidebar {
+        --offset: var(--space);
+        flex-grow: 1;
+        flex-basis: 300px;
+        align-self: start;
+        position: sticky;
+        /* top: var(--offset); */
+        top: 100px;
+        margin-right: 100px;
+        z-index: -10;
+    }
+    
+    .component {
+        display: grid;
+        grid-template-rows: auto 1fr auto;
+    }
+    
+    .component .content {
+        max-height: 500px;
+        overflow-y: auto;
+    }
+    
+    .sidebar .component {
+        max-height: calc(100vh - var(--offset) * 2);
+    }
+    /* Until flexbox gap is supported in all modern browsers, we use the negative margin trick to create space between the children elements */
+    
+    .component {
+        position: relative;
+        border: 1px solid var(--color-primary);
+        box-shadow: 0 1px 2px rgba(0, 0, 0, 0.04), 0 2px 4px rgba(0, 0, 0, 0.04), 0 4px 8px rgba(0, 0, 0, 0.03), 0 8px 16px rgba(0, 0, 0, 0.03), 0 16px 32px rgba(0, 0, 0, 0.02), 0 32px 64px rgba(0, 0, 0, 0.02);
+    }
+    
+    footer {
+        background: url(https://images.unsplash.com/photo-1434682881908-b43d0467b798?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxzZWFyY2h8MzJ8fGd5bXxlbnwwfDB8MHw%3D&auto=format&fit=crop&w=1500&q=60);
+        background-color: #cccccc;
+        height: 300px;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        margin-top: 50px;
+    }
+    
+    .card {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        max-width: 75%;
+        height: 350px;
+        /* background-color: white; */
+        color: white;
+        border-radius: 8px;
+        border: 1px solid grey;
+        margin: 30px 10px;
+    }
+    
+    .card .card-image {
+        width: 800px;
+        height: 350px;
+    }
+    
+    .card .card-image img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-top-left-radius: 8px;
+        border-bottom-left-radius: 8px;
+    }
+    
+    .card-text {
+        margin-left: 15px;
+    }
+    
+    .card-text .meta {
+        display: flex;
+        font-weight: bold;
+        font-size: 20px;
+        padding-top: 0px;
+        padding-bottom: 20px;
+    }
+    
+    .card-text .meta .date {
+        padding-left: 5px;
+        color: yellow;
+    }
+    
+    .card-text .title {
+        font-weight: bold;
+        font-size: 25px;
+        padding-bottom: 20px;
+    }
+    
+    .card-text .content {
+        line-height: 32px;
+        color: grey;
+        max-width: 95%;
+        font-size: 18px;
+        padding-bottom: 10px;
+    }
+    
+    .card-text .content .continue-reading {
+        color: orange;
+        font-size: 20px;
+        font-weight: bold;
+        padding: 10px;
+        border-radius: 2px;
+        text-decoration: none;
+    }
+    
+    .card-text .content .continue-reading:hover {
+        color: yellow;
+        transition: .5s;
+        cursor: pointer;
+    }
+    
+    .sidebar .component {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding: 20px;
+    }
+    
+    .sidebar .component img {
+        width: 100px;
+        height: 100px;
+        border-radius: 100px;
+        margin: 10px;
+    }
+    
+    .sidebar .component .header {
+        margin-bottom: 10px;
+        font-weight: bold;
+        letter-spacing: 2px;
+    }
+    
+    .sidebar .component .content {
+        margin-bottom: 5px;
+    }
+    
+    .sidebar .component .footer .button {
+        background: orange;
+        border: 1px solid orange;
+        padding: 8px;
+        font-weight: bold;
+        cursor: pointer;
+        border-radius: 2px;
+    }
+    
+    .sidebar .component .footer .button:hover {
+        transition: .5s;
+        background: transparent;
+        color: white;
+    }
+    
+    .sidebar .component .footer .empty-cart {
+        background: transparent;
+        margin-left: 10px;
+        color: white;
+    }
+    
+    .sidebar .component .footer .empty-cart:hover {
+        transition: .5s;
+        background: orange;
+        color: black;
+    }
+    
+    a {
+        text-decoration: none;
+    }
+    
+    .footer-text {
+        margin-left: 20px;
+        margin-bottom: 20px;
+        padding-top: 20px;
+        font-size: 20px;
+        line-height: 40px;
+    }
+    
+    .footer-text h3 {
+        font-size: 25px;
+    }
+    
+    .footer-text h3 a {
+        text-decoration: none;
+        color: white;
+    }
+    
+    .footer-text h3 a span {
+        color: yellow;
+    }
+    
+    .inner-footer-text {
+        margin: 20px;
+    }
+    
+    .inner-footer-text-icons {
+        display: none;
+    }
+    /* Mobile design */
+    
+    @media screen and (max-width:768px) {
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        header {
+            background: url(https://images.unsplash.com/photo-1580086319619-3ed498161c77?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1750&q=80);
+            background-color: #cccccc;
+            height: 150px;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            margin-bottom: 30px;
+        }
+        header .text {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            vertical-align: middle;
+            font-size: 70px;
+            font-weight: bold;
+        }
+        main {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
+        .article {
+            max-width: 87%;
+        }
+        .sidebar {
+            display: none;
+        }
+        .card {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            max-width: 100%;
+            height: auto;
+            /* background-color: white; */
+            color: white;
+            border-radius: 8px;
+            border: 1px solid grey;
+            margin: 30px 10px;
+        }
+        .card .card-image {
+            width: 100%;
+            height: 150px;
+        }
+        .card .card-image img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            border-top-left-radius: 8px;
+            border-top-right-radius: 8px;
+            border-bottom-left-radius: 0px;
+            border-bottom-right-radius: 0px;
+        }
+        .card-text {
+            margin-left: 15px;
+        }
+        .card-text .meta {
+            display: flex;
+            font-weight: bold;
+            font-size: 15px;
+            padding-top: 10px;
+            padding-bottom: 10px;
+        }
+        .card-text .meta .date {
+            padding-left: 10px;
+            color: yellow;
+        }
+        .card-text .title {
+            font-weight: bold;
+            font-size: 21px;
+            padding-bottom: 10px;
+        }
+        .card-text .content {
+            line-height: 22px;
+            color: grey;
+            max-width: 95%;
+            font-size: 14px;
+            padding-bottom: 10px;
+        }
+        .card-text .content .continue-reading {
+            color: orange;
+            font-size: 14px;
+            font-weight: bold;
+            padding: 10px;
+            border-radius: 2px;
+            text-decoration: none;
+        }
+        .card-text .content .continue-reading:hover {
+            color: yellow;
+            transition: .5s;
+            cursor: pointer;
+        }
+        a {
+            text-decoration: none;
+        }
+        footer {
+            background: url(https://images.unsplash.com/photo-1434682881908-b43d0467b798?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxzZWFyY2h8MzJ8fGd5bXxlbnwwfDB8MHw%3D&auto=format&fit=crop&w=1500&q=60);
+            background-color: #cccccc;
+            height: 150px;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+            margin-top: 50px;
+        }
+        .footer-text {
+            margin-left: 20px;
+            margin-bottom: 10px;
+            padding-top: 10px;
+        }
+        .footer-text h3 {
+            font-size: 25px;
+        }
+        .footer-text h3 a {
+            text-decoration: none;
+            color: white;
+        }
+        .footer-text h3 a span {
+            color: yellow;
+        }
+        .inner-footer-text {
+            display: none;
+        }
+        .inner-footer-text-icons {
+            display: flex;
+            list-style: none;
+            margin-left: 20px;
+            font-size: 25px;
+            margin-bottom: 20px;
+        }
+        .inner-footer-text-icons a {
+            text-decoration: none;
+            color: white;
+            padding-left: 30px;
+        }
+    }
