--- a/nav.css
+++ b/nav.css
@@ -12,6 +12,8 @@ nav {
     min-height: 10vh;
     background-color: black;
     font-family: 'Noto Sans', sans-serif;
+    width: 100%;
+    height: 10px;
 }
 
 .logo {
@@ -116,10 +118,14 @@ nav {
     nav {
         max-width: 100%;
         overflow: hidden;
+        position: sticky;
+        position: -webkit-sticky;
     }
     .logo {
         left: 0;
         display: block;
+        font-size: 20px;
+        margin-left: -25px;
     }
     #social {
         display: flex;
