--- a/article.css
+++ b/article.css
@@ -7,13 +7,13 @@
 
 body {
     background-color: black;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Noto Sans', sans-serif;
     color: white;
     box-sizing: border-box;
 }
 
 header {
-    background: url(https://images.unsplash.com/photo-1605296867304-46d5465a13f1?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80);
+    background: url(https://res.cloudinary.com/dgtmiq7wq/image/upload/v1614622957/ronchezFitness/Elusive_2_bjvtw6.png);
     background-color: #cccccc;
     height: 300px;
     background-position: center;
@@ -25,8 +25,8 @@ header {
 header .text {
     display: flex;
     justify-content: center;
-    align-items: center;
-    vertical-align: middle;
+    align-items: bottom;
+    vertical-align: bottom;
     font-size: 70px;
     font-weight: bold;
 }
@@ -120,4 +120,139 @@ footer {
 .article-highlight::after {
     content: "''";
     font-size: 40px;
+}
+
+@media screen and (max-width:768px) {
+    header {
+        background: url(https://res.cloudinary.com/dgtmiq7wq/image/upload/v1614622957/ronchezFitness/Elusive_2_bjvtw6.png);
+        background-color: #cccccc;
+        height: 250px;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        margin-bottom: 30px;
+    }
+    .text {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        vertical-align: middle;
+        font-size: 25px;
+        font-weight: bold;
+        margin-left: 20px;
+        margin-bottom: 30px;
+    }
+    .scroll-progress-indicator {
+        background: yellow;
+        position: fixed;
+        top: 0;
+        bottom: auto;
+        left: 0;
+        width: 0%;
+        height: 5px;
+        z-index: 1000;
+    }
+    .blog-wrapper {
+        padding-left: 10px;
+        padding-right: 10px;
+        line-height: 30px;
+        font-size: 17px;
+    }
+    .article-content {
+        line-height: 30px;
+    }
+    .art-image {
+        text-align: center;
+    }
+    #article-image {
+        max-width: 100%;
+        max-height: 400px;
+        border-radius: 10px;
+    }
+    #comment-title {
+        font-size: 30px;
+        font-weight: bold;
+    }
+    .comments {
+        margin-left: 20px;
+        font-size: 15px;
+    }
+    .comment {
+        display: flex;
+        flex-direction: column;
+        max-width: 90%;
+    }
+    #comment-height {
+        display: flex;
+        align-items: center;
+    }
+    #comment-name {
+        margin-left: 20px;
+        font-weight: bold;
+        text-decoration: underline yellow 2px;
+    }
+    #profile-pic {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        object-fit: cover;
+    }
+    #the-comment {
+        margin-left: 20px;
+        margin: 15px;
+    }
+    footer {
+        background: url(https://images.unsplash.com/photo-1580086319619-3ed498161c77?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1750&q=80);
+        background-color: #cccccc;
+        height: 150px;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        margin-top: 50px;
+    }
+    .footer-text {
+        margin-left: 20px;
+        margin-bottom: 10px;
+        padding-top: 10px;
+    }
+    .footer-text h3 {
+        font-size: 25px;
+    }
+    .footer-text h3 a {
+        text-decoration: none;
+        color: white;
+    }
+    .footer-text h3 a span {
+        color: yellow;
+    }
+    .inner-footer-text {
+        display: none;
+    }
+    .inner-footer-text-icons {
+        display: flex;
+        list-style: none;
+        margin-left: 20px;
+        font-size: 25px;
+        margin-bottom: 20px;
+    }
+    .inner-footer-text-icons a {
+        text-decoration: none;
+        color: white;
+        padding-left: 30px;
+    }
+    .article-highlight {
+        color: yellow;
+        padding-left: 20px;
+        font-size: 20px;
+        line-height: 40px;
+        font-style: italic;
+    }
+    .article-highlight::before {
+        content: "'' ";
+        font-size: 40px;
+    }
+    .article-highlight::after {
+        content: "''";
+        font-size: 40px;
+    }
 }
