--- a/blog.css
+++ b/blog.css
@@ -9,7 +9,7 @@
     
     body {
         background-color: black;
-        font-family: 'Roboto', sans-serif;
+        font-family: 'Noto Sans', sans-serif;
         color: white;
         box-sizing: border-box;
     }
@@ -365,6 +365,7 @@
             text-decoration: none;
         }
         footer {
+            /* background: url(https://images.unsplash.com/photo-1580086319619-3ed498161c77?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1750&q=80); */
             background: url(https://images.unsplash.com/photo-1434682881908-b43d0467b798?ixlib=rb-1.2.1&ixid=MXwxMjA3fDB8MHxzZWFyY2h8MzJ8fGd5bXxlbnwwfDB8MHw%3D&auto=format&fit=crop&w=1500&q=60);
             background-color: #cccccc;
             height: 150px;
