--- a/article.css
+++ b/article.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:wght@400;700&display=swap');
 @import url('./fonts/ElephantFont/Elephant-Outline.otf');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400&display=swap');
 * {
     box-sizing: border-box;
 }
@@ -13,22 +13,27 @@ body {
 }
 
 header {
-    background: url(https://res.cloudinary.com/dgtmiq7wq/image/upload/v1614622957/ronchezFitness/Elusive_2_bjvtw6.png);
-    background-color: #cccccc;
     height: 300px;
+    padding-top: 12px;
+}
+
+header .article-image {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://res.cloudinary.com/dgtmiq7wq/image/upload/v1614622957/ronchezFitness/Elusive_2_bjvtw6.png);
+    height: 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    margin-bottom: 30px;
+    position: relative;
 }
 
 header .text {
-    display: flex;
-    justify-content: center;
-    align-items: bottom;
-    vertical-align: bottom;
-    font-size: 70px;
-    font-weight: bold;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    font-size: 30px;
 }
 
 .scroll-progress-indicator {
@@ -45,6 +50,7 @@ header .text {
 .blog-wrapper {
     padding-left: 25%;
     padding-right: 25%;
+    padding-top: 30px;
     line-height: 30px;
     font-size: 17px;
 }
@@ -61,6 +67,7 @@ header .text {
     max-width: 100%;
     max-height: 400px;
     border-radius: 10px;
+    margin: 20px;
 }
 
 #comment-title {
@@ -75,7 +82,8 @@ header .text {
 .comment {
     display: flex;
     flex-direction: column;
-    max-width: 50%;
+    max-width: 65%;
+    margin: 20px;
 }
 
 #comment-height {
@@ -95,7 +103,7 @@ header .text {
 }
 
 footer {
-    background: url(https://images.unsplash.com/photo-1580086319619-3ed498161c77?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1750&q=80);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://images.unsplash.com/photo-1580086319619-3ed498161c77?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1750&q=80);
     background-color: #cccccc;
     height: 300px;
     background-position: center;
@@ -106,13 +114,17 @@ footer {
 
 .article-highlight {
     color: yellow;
-    padding-left: 20px;
-    font-size: 20px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 10%;
+    padding-right: 10%;
+    font-size: 25px;
     line-height: 40px;
-    font-style: italic;
+    font-weight: bold;
 }
 
-.article-highlight::before {
+
+/* .article-highlight::before {
     content: "'' ";
     font-size: 40px;
 }
@@ -120,7 +132,7 @@ footer {
 .article-highlight::after {
     content: "''";
     font-size: 40px;
-}
+} */
 
 @media screen and (max-width:768px) {
     header {
@@ -132,15 +144,15 @@ footer {
         background-size: cover;
         margin-bottom: 30px;
     }
-    .text {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        vertical-align: middle;
-        font-size: 25px;
-        font-weight: bold;
-        margin-left: 20px;
-        margin-bottom: 30px;
+    header .text {
+        text-align: left;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        color: white;
+        font-size: 17px;
+        width: 90%;
     }
     .scroll-progress-indicator {
         background: yellow;
@@ -153,8 +165,8 @@ footer {
         z-index: 1000;
     }
     .blog-wrapper {
-        padding-left: 10px;
-        padding-right: 10px;
+        padding-left: 5%;
+        padding-right: 5%;
         line-height: 30px;
         font-size: 17px;
     }
@@ -163,6 +175,7 @@ footer {
     }
     .art-image {
         text-align: center;
+        max-width: 90%;
     }
     #article-image {
         max-width: 100%;
@@ -181,6 +194,7 @@ footer {
         display: flex;
         flex-direction: column;
         max-width: 90%;
+        margin: 10px;
     }
     #comment-height {
         display: flex;
@@ -201,10 +215,14 @@ footer {
         margin-left: 20px;
         margin: 15px;
     }
+    br {
+        width: 100%;
+    }
     footer {
-        background: url(https://images.unsplash.com/photo-1580086319619-3ed498161c77?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1750&q=80);
+        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://images.unsplash.com/photo-1580086319619-3ed498161c77?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1750&q=80);
         background-color: #cccccc;
         height: 150px;
+        width: 100%;
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
@@ -242,17 +260,18 @@ footer {
     }
     .article-highlight {
         color: yellow;
-        padding-left: 20px;
+        padding-left: 10%;
+        padding-right: 10%;
         font-size: 20px;
         line-height: 40px;
-        font-style: italic;
+        font-weight: bold;
     }
-    .article-highlight::before {
+    /* .article-highlight::before {
         content: "'' ";
-        font-size: 40px;
+        font-size: 20px;
     }
     .article-highlight::after {
         content: "''";
-        font-size: 40px;
-    }
+        font-size: 20px;
+    } */
 }
