--- a/article.css
+++ b/article.css
@@ -15,6 +15,7 @@ body {
 header {
     height: 300px;
     padding-top: 12px;
+    z-index: -10;
 }
 
 header .article-image {
@@ -136,12 +137,13 @@ footer {
 
 @media screen and (max-width:768px) {
     header {
-        background: url(https://res.cloudinary.com/dgtmiq7wq/image/upload/v1614622957/ronchezFitness/Elusive_2_bjvtw6.png);
+        background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(https://res.cloudinary.com/dgtmiq7wq/image/upload/v1614622957/ronchezFitness/Elusive_2_bjvtw6.png);
         background-color: #cccccc;
         height: 250px;
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
+        position: relative;
         margin-bottom: 30px;
     }
     header .text {
