--- a/nav.css
+++ b/nav.css
@@ -156,6 +156,8 @@ nav {
         width: 100%;
         transform: translateX(100%);
         transition: transform 0.5s ease-in;
+        z-index: 1;
+
     }
     .nav-links .pages {
         font-size: 35px;
